# marian

./: .gitignore  README.md
client/: .cta.json  package.json  vite.config.ts
client/src/: routeTree.gen.ts  styles.css
client/src/components/chat/: ChatApp.tsx  ChatEmptyState.tsx  ChatLayout.tsx  ChatNavbar.tsx  ChatSidebar.tsx  Composer.tsx  MessageList.tsx
client/src/components/chat/hooks/: useChatSession.ts  useTtsController.ts
client/src/lib/api/: client.ts  history.ts  openaiStream.ts  tts.ts  types.ts
client/src/lib/audio/: StreamingTtsSegmenter.ts  bytes.ts  useAudioQueue.ts
client/src/lib/speech/: recordAudio.ts  useBrowserSpeechRecognition.ts
client/src/lib/storage/: chatHistory.client.ts
client/src/routes/: __root.tsx  index.tsx
client/src/routes/v1/: sessions.ts
client/src/routes/v1/audio/: speech.ts
client/src/routes/v1/chat/: completions.ts
client/src/routes/v1/sessions/: $sessionId.ts
server/: app.py  chat_history.db  main.py  pyproject.toml  tts_kokoro.py
server/app/api/: router.py
server/app/api/v1/: sessions.py
server/app/api/v1/openai/: audio_speech.py  chat_completions.py
server/app/core/: dependencies.py  settings.py
server/app/schemas/: openai_audio.py  openai_chat.py
server/app/services/: chat_runtime.py  chat_service.py  factory.py  graphiti_embedder.py  history.py  markdown_tts.py  tts_runtime.py
