[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "graphiti-core>=0.26.3",
    "kokoro>=0.9.4",
    "langchain-openai>=1.1.7",
    "langfuse>=3.12.1",
    "langgraph>=1.0.7",
    "neo4j>=6.1.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pydantic-ai>=1.47.0",
    "uvicorn>=0.40.0",
]
